blocks/columns/default.css
/* ... */
.columns.box-shadow-hover > div li {
  padding-bottom: 1rem;
}

.columns.numeric-list li:last-of-type {
  margin-left: 2rem;
  padding-left: 1rem;
  border-left: var(--color-orange) solid 4px;
  height: 100%;
}

.columns.numeric-list li:first-of-type {
  top: 1rem;
}

.columns.numeric-list li:first-of-type > strong {
  font-size: 4rem;
  color: var(--color-cyan);
}

.columns.box-shadow-hover > div > div > h3 {
  color: #133b5c;
}

.columns.box-shadow-hover > div > div:hover > h3, .columns.box-shadow-hover > div > div:hover img {
  color: #006cb4;
  fill: #006cb4;
}

.columns.box-shadow-hover.columns span.icon > img {
  height: 150px;
  width:auto;
}

.columns.box-shadow-hover > div > div:hover {
  filter: drop-shadow(0 0 .5rem #DAD6D6);
  background-color: var(--color-white);
}

.section.border-between-rows .columns > div > .columns-img-col img {
  margin-left: 16.6667%
}

.section.border-between-rows .columns > div > div {
  justify-content: flex-start;
}

.section.border-between-rows .columns > div:first-child {
  border-bottom: .5px solid var(--color-light-gray);
  margin: 1rem 0;
}

.section.border-between-rows .columns div:nth-child(2) div:nth-child(2)  {
  align-items: flex-start;
}

main .section.blue-headings .columns span.icon > img {
  width: var(--icon-size-xl);
  height: var(--icon-size-xl);
}

.columns.small-images.centered > div > div > p:first-of-type img {
  width: 50%;
}

.columns.small-images.centered > div > div > p:first-of-type {
  text-align: center;
}

.columns.small-images.centered > div > div > p:last-of-type {
  text-align: center;
}

main .block.columns.video iframe {
  aspect-ratio: 16 / 9;
}

main .section.columns-container .block.columns.columns-2-cols.icon-list > div > div > p.button-container:has(a) > a.button {
  display: inline-block;
  text-decoration: none;
  background-color: unset;
  border: unset;
  padding: unset;
  text-align: center;
  font-style: normal;
  font-weight: 600;
  cursor: pointer;
  color: unset;
  margin-bottom: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: unset;
}

main .section.columns-container .block.columns.columns-2-cols.icon-list > div > div > p.button-container:has(a) > a.button::after {
  content:"\279E";
  font-size: 1em;
  font-weight: 500;
  padding: 0 0.5em;
  vertical-align: -0.1em;
}

main .section.columns-container.close-vertical {

  & > .columns-wrapper {
    margin-top: unset;
    margin-bottom: .5rem;

    & > .block.columns {
      margin: 0;
    }
  }

  & > div:not(div:first-of-type).default-content-wrapper {
    margin-top: unset;
  }

  & > div:not(div:first-of-type):not(div:last-of-type).default-content-wrapper {
    margin-bottom: 1.5rem;
  }
}


@media (min-width: 992px /* breakpoint-l */) {
  .columns.block:not(.wrap-mobile) > div {
    flex-direction: unset;
    gap: 24px;
  }

  .columns.block:not(.wrap-mobile, .cta.columns-2-cols) > div > div {
    flex: 1;
    order: unset;
  }

  .columns.cyan-accent-border > div {
    flex-direction: row;
    flex-wrap: unset;
  }

  .columns.narrow-icons > div {
    align-items: flex-start;
    gap: unset;
  }

  .columns.steps > div > div {
    height: 100%;
  }

  .columns.narrow-icons h4 {
    font-size: 1rem;
  }

  .columns.narrow-icons h4 > a {
    color: var(--color-black);
  }

  .columns.narrow-icons > div > div {
    width: 8.3%;
  }

  .columns.narrow-icons p.button-container {
    color: unset;
    margin-bottom: unset;
  }

  .columns.narrow-icons p.button-container > a {
    border: unset;
    background-color: unset;
  }

  .columns.orange-accent-border.columns-has-image > div > div,
  .columns.cyan-accent-border.columns-has-image > div > div {
    justify-content: unset;
  }

  .columns.orange-accent-border.columns-has-image > div > div:first-of-type,
  .columns.cyan-accent-border.columns-has-image > div > div:first-of-type {
    padding-left: 0;
  }

  main .columns.numeric-list ul {
    flex-direction: row;
  }

  main .columns.numeric-list span.icon > img {
    width:3.75rem;
    height:3.75rem;
    max-width: unset;
  }

  main .columns.logos.columns-4-cols span.icon > img {
    height: 72px;
    width: 100%;
  }
}
/* ... */

